# JinnyAssistant

./: compose.yml  main.py  pyproject.toml  readme.md
