[tool.poetry]
name = "JinnyAssistant"
version = "0.1.0"
description = "Jinny is an assistant that helps to solve issues on GitHub."
authors = ["Mikhail Shostak"]

[tool.poetry.dependencies]
python = "^3.9"
openai = "*"
requests = "*"
tomli = "*"
flask = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
